[gd_scene load_steps=9 format=3 uid="uid://d0ok63awdq7xq"]

[ext_resource type="Texture2D" uid="uid://dlwyptiuoufwn" path="res://assets/other/Climate-removebg-preview.png" id="1_25jh2"]
[ext_resource type="Script" uid="uid://c6fkllannx3j8" path="res://scenes/welcome.gd" id="1_b1rs5"]
[ext_resource type="FontFile" uid="uid://b3esi7yukr5pn" path="res://assets/fonts/Papernotes.ttf" id="2_b1rs5"]
[ext_resource type="PackedScene" uid="uid://qxx128vk0vhm" path="res://scenes/extras/canvas_layer.tscn" id="4_wm3rh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wm3rh"]
bg_color = Color(0.823529, 0.913725, 0.945098, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.258824, 0.435294, 0)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.658824, 0.658824, 0.658824, 0)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1k3ta"]
bg_color = Color(0.825489, 0.913278, 0.943418, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.228076, 0.258089, 0.434836, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.65834, 0.65834, 0.65834, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v60w2"]
bg_color = Color(0.503296, 0.643798, 0.659802, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.228076, 0.258089, 0.434836, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.65834, 0.65834, 0.65834, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7btu"]
bg_color = Color(0.825489, 0.913278, 0.943418, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.228076, 0.258089, 0.434836, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.65834, 0.65834, 0.65834, 0.6)
shadow_size = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1rs5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.169891, 0.219057, 0.316653, 1)

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(577, 218)
scale = Vector2(0.66, 0.66)
texture = ExtResource("1_25jh2")

[node name="start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = 72.0
offset_right = 83.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0.258824, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.258824, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_b1rs5")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_wm3rh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1k3ta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v60w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_o7btu")
action_mode = 0
text = "Start"

[node name="quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = 152.0
offset_right = 12.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0.258824, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.258824, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_b1rs5")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_wm3rh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1k3ta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v60w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_o7btu")
action_mode = 0
text = "Quit"

[node name="info" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 153.0
offset_right = 83.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0.258824, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0.258824, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_b1rs5")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_wm3rh")
theme_override_styles/hover = SubResource("StyleBoxFlat_1k3ta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v60w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_o7btu")
action_mode = 0
text = "i"

[node name="information" parent="." instance=ExtResource("4_wm3rh")]
visible = false

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="info" to="." method="_on_info_pressed"]
